--- a/index.html
+++ b/index.html
@@ -8,6 +8,70 @@
    <script src="game.js"></script>
 </head>
 <body>
-   
+   <div class="container">
+      <div class="gameTitle">타이틀 제목</div>
+      <div class="game">
+         <div class="box1">
+            <div class="progressbar">
+               <span>0/100</span>
+               <div class="bar"></div>
+            </div>
+            <div class="charater"></div>
+         </div>
+         <div class="box2">
+            <button class="autoBtn active">자동화</button>
+            <button class="upgradeBtn">클릭</button>
+            <div class="content">
+               <ul class="shop1">
+                  <li class="items">
+                     <div class="title">
+                        <div class="image">
+                           <img src="http://placehold.it/50X50" alt="">
+                        </div>
+                        <p class="name">목욕</p>
+                     </div>
+                     <p class="price">1,000</p>
+                     <p class="step">0</p>
+                  </li>
+                  <li class="items">
+                     <div class="title">
+                        <div class="image"><img src="http://placehold.it/50X50" alt=""></div>
+                        <p class="name">먹이</p>
+                     </div>
+                     <p class="price">1,000</p>
+                     <p class="step">0</p>
+                  </li>
+                  <li class="items">
+                     <div class="title">
+                        <div class="image"><img src="http://placehold.it/50X50" alt=""></div>
+                        <p class="name">장난감</p>
+                     </div>
+                     <p class="price">1,000</p>
+                     <p class="step">10</p>
+                  </li>
+                  <li class="items">
+                     <div class="title">
+                        <div class="image"><img src="http://placehold.it/50X50" alt=""></div>
+                        <p class="name">산책</p>
+                     </div>
+                     <p class="price">13,000,000</p>
+                     <p class="step">10</p>
+                  </li>
+                  <li class="items">
+                     <div class="title">
+                        <div class="image"><img src="http://placehold.it/50X50" alt=""></div>
+                        <p class="name">산책</p>
+                     </div>
+                     <p class="price">13,000,000</p>
+                     <p class="step">10</p>
+                  </li>
+               </ul>
+               <div class="shop2">
+
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
 </body>
 </html>
