--- a/index.html
+++ b/index.html
@@ -28,51 +28,64 @@
                   <li class="items">
                      <div class="title">
                         <div class="image">
-                           <img src="http://placehold.it/50X50" alt="">
+                           <!-- <img src="http://placehold.it/50X50" alt=""> -->
+                           <p>👍︎</p>
+                        </div>
+                        <p class="name">칭찬</p>
+                     </div>
+                     <p class="price">15</p>
+                     <p class="step">0</p>
+                  </li>
+                  <li class="items">
+                     <div class="title">
+                        <div class="image">
+                           <!-- <img src="http://placehold.it/50X50" alt=""> -->
+                           <p>🍖</p>
+                        </div>
+                        <p class="name">먹이</p>
+                     </div>
+                     <p class="price">100</p>
+                     <p class="step">0</p>
+                  </li>
+                  <li class="items">
+                     <div class="title">
+                        <div class="image">
+                           <!-- <img src="http://placehold.it/50X50" alt=""> -->
+                           <p>🏉</p>
+                        </div>
+                        <p class="name">놀이</p>
+                     </div>
+                     <p class="price">1,100</p>
+                     <p class="step">0</p>
+                  </li>
+                  <li class="items">
+                     <div class="title">
+                        <div class="image">
+                           <!-- <img src="http://placehold.it/50X50" alt=""> -->
+                           <p>🌳</p>
+                        </div>
+                        <p class="name">산책</p>
+                     </div>
+                     <p class="price">12,000</p>
+                     <p class="step">0</p>
+                  </li>
+                  <li class="items">
+                     <div class="title">
+                        <div class="image">
+                           <!-- <img src="http://placehold.it/50X50" alt=""> -->
+                           <p>🛁</p>
                         </div>
                         <p class="name">목욕</p>
                      </div>
-                     <p class="price">1,000</p>
+                     <p class="price">130,000</p>
                      <p class="step">0</p>
-                  </li>
-                  <li class="items">
-                     <div class="title">
-                        <div class="image"><img src="http://placehold.it/50X50" alt=""></div>
-                        <p class="name">먹이</p>
-                     </div>
-                     <p class="price">1,000</p>
-                     <p class="step">0</p>
-                  </li>
-                  <li class="items">
-                     <div class="title">
-                        <div class="image"><img src="http://placehold.it/50X50" alt=""></div>
-                        <p class="name">장난감</p>
-                     </div>
-                     <p class="price">1,000</p>
-                     <p class="step">10</p>
-                  </li>
-                  <li class="items">
-                     <div class="title">
-                        <div class="image"><img src="http://placehold.it/50X50" alt=""></div>
-                        <p class="name">산책</p>
-                     </div>
-                     <p class="price">13,000,000</p>
-                     <p class="step">10</p>
-                  </li>
-                  <li class="items">
-                     <div class="title">
-                        <div class="image"><img src="http://placehold.it/50X50" alt=""></div>
-                        <p class="name">산책</p>
-                     </div>
-                     <p class="price">13,000,000</p>
-                     <p class="step">10</p>
                   </li>
                </ul>
                <div class="shop2">
                   <i class="far fa-hand-paper"></i>
                   <div>
                      <button class="buyBtn">쓰다듬 업그레이드</button>
-                     <span>비용 : 500원</span>
+                     <span class="clickPrice"></span>
                      <span>펫 쓰다듬기 애정도 2배 증가</span>
                   </div>
                </div>
