--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
    </div>
    <!-- 게임 화면 -->
    <div class="container">
-      <div class="gameTitle">펫 키우기</div>
       <div class="game">
          <!-- 펫 영역 -->
          <div class="box1">
@@ -99,6 +98,9 @@
                </div>
             </div>
          </div>
+      </div>
+      <div class="miniGame">
+         <button class="flappyBird">1</button>
       </div>
    </div>
 </body>
