--- a/index.html
+++ b/index.html
@@ -100,7 +100,16 @@
          </div>
       </div>
       <div class="miniGame">
-         <button class="flappyBird">1</button>
+         <h2>미니게임</h2>
+         <button class="flappyBird">
+
+         </button>
+         <button class="flappyBird">
+
+         </button>
+         <button class="flappyBird">
+            
+         </button>
       </div>
    </div>
 </body>
