--- a/test.html
+++ b/test.html
@@ -5,21 +5,15 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
    <style>
-      @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css');
 
-      .active{
-         
-      }
    </style>
 </head>
 <body>
-   
+   <p></p>
 </body>
 </html>
 <script>
-   const effect = document.createElement('i');
-   document.body.appendChild(effect);
-   effect.classList.add('fas');
-   effect.classList.add('fa-heart');
-   effect.classList.add('active');
+   let number = 12323;
+   document.writeln();
+   document.querySelector('p').textContent = number.toLocaleString('ko-KR');
 </script>
