--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <h1>🎲미니게임</h1>
       <div class="miniGame">
          <button class="fbBtn">
-            <img src="./img/buttomImg.png" alt="flappyBirdImg">
+            <img src="./img/buttonImg.png" alt="flappyBirdImg">
          </button>
          <button class="test1">
 
@@ -118,6 +118,9 @@
       <!-- <button class="startBtn">시작</button> -->
       <p>z를 눌러서 시작</p>
       <button class="exitBtn">종료</button>
+   </div>
+   <div class="dino">
+      
    </div>
 </body>
 </html>
