--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
             <img src="./img/buttonImg.png" alt="flappyBirdImg">
          </button>
          <button class="test1">
-
+            준비중
          </button>
          <button class="test2">
-
+            준비중
          </button>
       </div>
    </div>
